[tool.poetry]
name = "osint-d2"
version = "0.1.0"
description = "CLI OSINT moderna para investigación de identidades (Clean Architecture)."
authors = []
readme = "README.md"
include = [
  "src/templates/*.html",
  "src/adapters/templates/*.html",
]
packages = [
  { include = "core", from = "src" },
  { include = "adapters", from = "src" },
  { include = "cli", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
click = "8.1.7"
typer = "^0.12.3"
rich = "^13.7.1"
httpx = "^0.27.2"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"
openai = "^1.59.9"
jinja2 = "^3.1.5"
weasyprint = "60.1"
pydyf = "<0.11"
beautifulsoup4 = "^4.12.3"
tls-client = "^1.0.1"

[tool.poetry.scripts]
osint-d2 = "cli.main:run"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
